@@ -1,3 +1,8 @@
+2010-12-10 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* generic/tclIO.c: Make sure [fcopy -size ... -command ...] always
+	* tests/io.test:   calls the callback asynchronously, even for size zero.
+
 2010-12-10  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclBinary.c:  Fix gcc -Wextra warning: missing initializer
